# esp-serial-flasher

./: .pre-commit-config.yaml  CMakeLists.txt
docs/: README.md
include/: esp_loader_elf.h
private_include/: elf32.h  esp_elf_image_priv.h  sha256.h
src/: esp_elf_image.c  sha256.c
test/: CMakeLists.txt  README.md  test_elf_parser.cpp
test/t/: 0001-elf-parser.t  loader_stub.c  tap.h  test_elf_parser.c
